<resources>
    <string name="app_name">TeCh</string>
    <string name="title_activity_usuario_main">UsuarioMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_agenda">Empresas</string>
    <string name="menu_retos">Retos</string>
    <string name="menu_ajustes">Ajustes</string>

    <string name="title_activity_empresa_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
