<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tech.UsuarioBasico.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.tech.UsuarioBasico.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.example.tech.UsuarioBasico.ui.ajustes.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_ajustes" />

    <fragment
        android:id="@+id/nav_retos"
        android:name="com.example.tech.UsuarioBasico.ui.retos.RetosFragment"
        android:label="@string/menu_retos"
        tools:layout="@layout/fragment_retos" />

    <fragment
        android:id="@+id/nav_agenda"
        android:name="com.example.tech.UsuarioBasico.ui.empresas.EmpresasFragment"
        android:label="@string/menu_agenda"
        tools:layout="@layout/fragment_empresas" />
</navigation>